--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint ./src/",
+    "lint:fix": "eslint ./src/ --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,9 +17,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
